--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 30px;
+    margin-top: 20px;
     background-color: #00001b;
     color: #fcfaec;
     font-family: 'Montserrat', sans-serif;
@@ -31,15 +31,33 @@ body {
 
 #game-screen {
     margin-left: 50px;
-    margin-top: 20px;
+    margin-top: 35px;
     border: 5px solid #fcfaec;
 }
 
 #logo {
-    width: 300px;
+    width: 250px;
 }
 
 #email {
     width: 550px;
     margin-top: 20px;
+}
+
+#wifi-icon {
+    width: 60px;
+}
+
+#bouncy-icon {
+    width: 35px;
+}
+
+.icons-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 30px;
+    text-decoration: underline 3px;
+    text-underline-offset: 5px;
 }
