solve table head problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -379,6 +379,7 @@ button, input {
 #scores-table th {
     font-size: 14px;
     width: 70%;
+    height: 9.09%;
     color: #00001b;
     background-color: #fcfaec;
     
