--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,6 @@ body {
 
 #logo {
     width: 170px;
-    position: fixed;
     opacity: 1;
     animation-name: logoAppearing;
     animation-duration: 4s;
@@ -48,26 +47,31 @@ body {
 
 @keyframes logoAppearing {
     0% {
+        position: fixed;
         opacity: 0;
         top: -20%;
     }
 
     90% {
+        position: fixed;
         opacity: 1;
         top: -20%;
     }
 
     95% {
+        position: fixed;
         opacity: 1;
         top: 3%;
     }
 
     97.5% {
+        position: fixed;
         opacity: 1;
         top: 2%;
     }
 
     100% {
+        position: fixed;
         opacity: 1;
         top: 3%;
     }
@@ -75,7 +79,19 @@ body {
 
 #email {
     width: 450px;
-    margin-top: 63px;
+    margin-top: 20px;
+    animation-name: emailMargin;
+    animation-duration: 4s;
+}
+
+@keyframes emailMargin {
+    0% {
+        margin-top: 64.3px;
+    }
+
+    100% {
+        margin-top: 64.3px;
+    }
 }
 
 #wifi-icon {
@@ -142,6 +158,27 @@ button, input {
 #arrow-keys {
     display: flex;
     justify-content: center;
+}
+
+#music-on, #music-off {
+    padding: 10px;
+    border: 3px solid #fcfaec;
+    position: absolute;
+    top: 2.2px;
+    left: 428px;
+}
+
+#music-on:hover, #music-off:hover {
+    background-color: rgb(190, 81, 81);
+}
+
+#music-on img {
+    width: 30px;
+}
+
+#music-off img {
+    width: 30px;
+    height: 23.5px;
 }
 
 /* GAME OVER BUTTONS */
