--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -453,7 +453,7 @@ button, input {
 #scores-table th {
     font-size: 14px;
     width: 30%;
-    height: 9.09%;
+    height: 43.5px;
     color: #00001b;
     background-color: #fcfaec;
     
